; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gdb/gdb/extr_gdbarch.c_gdbarch_long_long_bit.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gdb/gdb/extr_gdbarch.c_gdbarch_long_long_bit.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.gdbarch = type { i32 }

@gdbarch_debug = common dso_local global i32 0, align 4
@gdb_stdlog = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [30 x i8] c"gdbarch_long_long_bit called\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @gdbarch_long_long_bit(%struct.gdbarch* %0) #0 {
  %2 = alloca %struct.gdbarch*, align 8
  store %struct.gdbarch* %0, %struct.gdbarch** %2, align 8
  %3 = load %struct.gdbarch*, %struct.gdbarch** %2, align 8
  %4 = icmp ne %struct.gdbarch* %3, null
  %5 = zext i1 %4 to i32
  %6 = call i32 @gdb_assert(i32 %5)
  %7 = load i32, i32* @gdbarch_debug, align 4
  %8 = icmp sge i32 %7, 2
  br i1 %8, label %9, label %12

9:                                                ; preds = %1
  %10 = load i32, i32* @gdb_stdlog, align 4
  %11 = call i32 @fprintf_unfiltered(i32 %10, i8* getelementptr inbounds ([30 x i8], [30 x i8]* @.str, i64 0, i64 0))
  br label %12

12:                                               ; preds = %9, %1
  %13 = load %struct.gdbarch*, %struct.gdbarch** %2, align 8
  %14 = getelementptr inbounds %struct.gdbarch, %struct.gdbarch* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 4
  ret i32 %15
}

declare dso_local i32 @gdb_assert(i32) #1

declare dso_local i32 @fprintf_unfiltered(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
